# Edgy

./: .gitignore  build.gradle  readme.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: output.json
app/src/androidTest/java/com/software/corvidae/edgy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/software/corvidae/edgy/: AutoFitTextureView.kt  MainActivity.kt
app/src/main/jni/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: main_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
